--- a/src/components/social-links/social-links.module.css
+++ b/src/components/social-links/social-links.module.css
@@ -2,3 +2,8 @@ footer a ion-icon {
     color: #fff;
     padding: 5px 5px 0;
 }
+
+footer a ion-icon:hover {
+    opacity: 0.7;
+    color: #00a3ff;
+  }
