--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -57,7 +57,7 @@ a:hover {
 }
 
 #app {
-  padding: 4em;
+  padding: 3em;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -89,7 +89,7 @@ a:hover {
 }
 
 .linkHead li {
-  margin-right: 55px;
+  margin-right: 50px;
 }
 
 
@@ -201,36 +201,56 @@ a:hover {
 }
 
 .sectio {
-  display: flex;
-}
+    display: flex;
+  }
+
 
 
 
 @media screen and (max-width: 600px) {
+  #app{
+    padding: 1em;
+  }
+
   .app {
-    padding: 2rem 2rem;
+    padding: 1em;
   }
   .search {
-    padding: 1rem 3rem;
+    padding: 1rem 2rem;
     width: 100%;
   }
   .search input {
-    font-size: 0.1rem;
+    font-size: 1rem;
+    width: 3em;
   }
   .search img {
-    width: 20px;
-    height: 20px;
+    width: 15px;
+    height: 15px;
   }
 
   .linkHead li{
+    font-size: 8pt;
     padding-right: 0px;
   }
+  .menuHead {
+    padding: 2em;
+  }
+  .container{
+    padding-right: -30em;
+  }
+  .logo img {
+    width: 250px;
+    height: 54px;
+    margin: auto;
+    object-fit: cover;
+  }
+
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 430px) {
 
   #app{
-    padding: 0.4em;
+    padding: 0.3em;
   }
   .app {
     padding: 1rem ;
@@ -240,30 +260,68 @@ a:hover {
   }
   .container {
     margin-top: 2rem;
-    padding-left: 125em;
+    padding-left: 123em;
   }
   .movie {
     width: 100%;
     margin: 1rem;
   }
   .search {
-    padding: 1rem 3rem;
+
+    padding: 1rem 1rem;
+    width: 30%;
+  }
+
+  .search img {
+
+    padding-left: 2em;
     width: 100%;
   }
-
-  .search input{
-    flex: 1;
-    border: none;
-    padding-right: 1rem;
-    outline: none;
-    color: #000000;
-    background: #64697a;
-    font-weight: bolder;
-    font-size: 0.1em;
-    font-weight: 500;
-
+  .search input {
+    font-size: 65%;
+    width: 5em;
   }
-
-
-
+  .sectio {
+    display: flex;
+    padding-left: 2em;
+  }
+  .alta {
+    display: flex;
+    font-weight: bolder;
+    padding-right: 91em;
+    padding-top: 1em;
+    font-size: 18pt;
+  }
+  .recomendado {
+    display: flex;
+    font-weight: bolder;
+    padding-right: 88em;
+    padding-top: 2em;
+    font-size: 18pt;
+  }
+  .linkHead ul {
+    align-items: center;
+    text-align: center;
+    font-size: 25pt;
+    font-weight: bolder;
+    color: #00a3ff;
+    list-style-type: none;
+    display: flex;
+    display: none;
+  }
+  .linkHead li {
+    margin-right: 15px;
+  }
+  .logo img {
+    object-fit: cover;
+    align-items: center;
+    
+  }
+  .menuHead {
+    width: 100%;
+    display: flex;
+    align-items: left;
+    justify-content: space-evenly;
+    padding-right: 0em;
+  }
 }
